# Service/musicservice/interal/server/server.go
@@ -6,6 +6,7 @@ import (
 	"musicservice/interal/app"
 	"musicservice/interal/models"
 	"net/http"
+	"strconv"
 )
 
 // Server represents the server interface
@@ -25,22 +26,58 @@ func NewMysicServer(logger *slog.Logger, app app.App) *MysicServer {
 // @Tags         data
 // @Accept       json
 // @Produce      json
+// @Param        page query string true "first page"
+// @Param        limit query string true "count page"
 // @Param        input body models.FilterSong true "filter information"
 // @Success      200  {array} models.Song
-// @Failure      400  
-// @Failure      500  
-// @Router       /data [post]
+// @Failure      400  "Bad request error"
+// @Failure      404 "Not found error"
+// @Failure      405 "Method not allowed"
+// @Failure      500  "Internal server error"
+// @Router       /search [post]
 func (s *MysicServer) GetData(w http.ResponseWriter, r *http.Request) {
     s.logger.Info("Getting data music from server" + r.URL.String())
+
+    if r.Method!= "POST" {
+        s.logger.Error("Error getting data from server" + " method not allowed")
+        http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
+        return
+    }
+
+    defer r.Body.Close()
+
+    page := r.URL.Query().Get("page")
+    if page == "" {
+        page = "1"
+    }
+
+    limit := r.URL.Query().Get("limit")
+    if limit == "" {
+        limit = "1000"
+    }
+
+    frstpg, err := strconv.Atoi(page)
+    if err != nil || frstpg < 1 {
+        s.logger.Error("Error converting page to integer", err)
+        http.Error(w, "Invalid page", http.StatusBadRequest)
+    }
+
+    limcnt, err := strconv.Atoi(limit)
+    if err != nil {
+        s.logger.Error("Error converting limit to integer", err)
+        http.Error(w, "Invalid limit", http.StatusBadRequest)
+    }
+
+
 	var filter models.FilterSong
-	err := json.NewDecoder(r.Body).Decode(&filter)
+	err = json.NewDecoder(r.Body).Decode(&filter)
 	if err != nil {
-		s.logger.Debug("Error decoding filter song from server" + err.Error())
+		s.logger.Error("Error decoding filter song from server" + err.Error())
 		http.Error(w, "Invalid request body", http.StatusBadRequest)
 		return
 	}
 
-    songs, err := s.app.GetDataMusic(filter)
+    songs, err := s.app.GetDataMusic(filter, frstpg, limcnt)
     if err!= nil {
         s.logger.Error("Error getting data from database" + err.Error())
         http.Error(w, "Failed to get data from database", http.StatusInternalServerError)
@@ -58,13 +95,50 @@ func (s *MysicServer) GetData(w http.ResponseWriter, r *http.Request) {
 // @Tags         text
 // @Accept       json
 // @Produce      json
+// @Param        page query string true "first page"
+// @Param        limit query string true "count page"
 // @Param        song query string true "song name"
 // @Success      200  {object} server.TextSong
-// @Failure      400  
-// @Failure      500  
-// @Router       /text [get]
+// @Failure      400  "Bad request error"
+// @Failure      404 "Not found error"
+// @Failure      405 "Method not allowed"
+// @Failure      500  "Internal server error"
+// @Router       /text [post]
 func (s *MysicServer) GetText(w http.ResponseWriter, r *http.Request) {
 	s.logger.Info("Getting text from database " + r.URL.String())
+
+
+    if r.Method!= "POST" {
+        s.logger.Error("Error getting data from server" + " method not allowed")
+        http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
+        return
+    }
+
+    defer r.Body.Close()
+
+    page := r.URL.Query().Get("page")
+    if page == "" {
+        page = "1"
+    }
+
+    limit := r.URL.Query().Get("limit")
+    if limit == "" {
+        limit = "1000"
+    }
+
+    frstpg, err := strconv.Atoi(page)
+    if err != nil || frstpg < 1 {
+        s.logger.Error("Error converting page to integer", err)
+        http.Error(w, "Invalid page", http.StatusBadRequest)
+    }
+
+    limcnt, err := strconv.Atoi(limit)
+    if err != nil {
+        s.logger.Error("Error converting limit to integer", err)
+        http.Error(w, "Invalid limit", http.StatusBadRequest)
+    }
+
+
 	song := r.URL.Query().Get("song")
 	if song == "" {
 		s.logger.Debug("Error getting song from server" + " song not found")
@@ -72,7 +146,7 @@ func (s *MysicServer) GetText(w http.ResponseWriter, r *http.Request) {
         return
 	}
 
-	text, err := s.app.GetTextSong(song)
+	text, err := s.app.GetTextSong(song, frstpg, limcnt)
 	if err!= nil {
         s.logger.Error("Error getting text from database" + err.Error())
         http.Error(w, "Failed to get text from database", http.StatusInternalServerError)
@@ -97,12 +171,21 @@ type TextSong struct {
 // @Accept       json
 // @Produce      json
 // @Param        song query string true "song name"
-// @Success      204
-// @Failure      400  
-// @Failure      500  
+// @Success      204 "success response"
+// @Failure      400  "Bad request error"
+// @Failure      404 "Not found error"
+// @Failure      405 "Method not allowed"
+// @Failure      500  "Internal server error"
 // @Router       /delete [delete]
 func (s *MysicServer) DeleteSong(w http.ResponseWriter, r *http.Request) {
 	s.logger.Info("Deleting song from database " + r.URL.String())
+
+    if r.Method != "DELETE" {
+        s.logger.Error("Error deleting song from server" + " method not allowed")
+        http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
+        return
+    }
+
     song := r.URL.Query().Get("song")
     if song == "" {
         s.logger.Debug("Error getting song from server" + " song not found")
@@ -128,12 +211,21 @@ func (s *MysicServer) DeleteSong(w http.ResponseWriter, r *http.Request) {
 // @Accept       json
 // @Produce      json
 // @Param        input body models.FilterSong true "update song"
-// @Success      204
-// @Failure      400  
-// @Failure      500  
+// @Success      204 "success response"
+// @Failure      400  "Bad request error"
+// @Failure      404 "Not found error"
+// @Failure      405 "Method not allowed"
+// @Failure      500  "Internal server error"
 // @Router       /update [post]
 func (s *MysicServer) UpdateSong(w http.ResponseWriter, r *http.Request) {
 	s.logger.Info("Update song from database  " + r.URL.String())
+
+    if r.Method!= "POST" {
+        s.logger.Error("Error updating song from server" + " method not allowed")
+        http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
+        return
+    }
+
 	var song models.FilterSong
 	err := json.NewDecoder(r.Body).Decode(&song)
 	if err!= nil {
@@ -161,12 +253,20 @@ func (s *MysicServer) UpdateSong(w http.ResponseWriter, r *http.Request) {
 // @Produce      json
 // @Param        input body models.NewSong true "song struct"
 // @Success      200 {object} server.NewID
-// @Failure      400  
-// @Failure      500  
+// @Failure      400  "Bad request error"
+// @Failure      404 "Not found error"
+// @Failure      405 "Method not allowed"
+// @Failure      500  "Internal server error"
 // @Router       /create [post]
 func (s *MysicServer) CreateSong(w http.ResponseWriter, r *http.Request) {
 	s.logger.Info("Creating new song in database " + r.URL.String())
     
+    if r.Method == "POST" {
+        s.logger.Error("Error creating song from server" + " method not allowed")
+        http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
+        return
+    }
+
     var newsong models.NewSong
     err := json.NewDecoder(r.Body).Decode(&newsong)
     if err != nil {
